// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Welcome|Sample Hello World 1`] = `
<div>
  <h1
    data-testid="label_id"
  >
    Hello 
    World
  </h1>
  <p>
    Type something to enable the Submit button
  </p>
  <input
    data-testid="input_id"
    onChange={[Function]}
    placeholder="type something..."
    value=""
  />
  <button
    data-testid="button_id"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Welcome|Sample Second Way 1`] = `
<div>
  <h1
    data-testid="label_id"
  >
    Hello 
    Second
  </h1>
  <p>
    Type something to enable the Submit button
  </p>
  <input
    data-testid="input_id"
    onChange={[Function]}
    placeholder="type something..."
    value=""
  />
  <button
    data-testid="button_id"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Welcome|SampleV2 Sample With Sub Component 1`] = `
<div>
  <h1>
    Select User from List Below
  </h1>
  <p>
    There are two parts to this Sample: 
  </p>
  <ol>
    <li>
      Click on the Add / Minus buttons to change index value. (to demo testing with multiple same child component in parent component)
    </li>
    <li>
      Select button to select data from a list. (to demo testing data array and error handling)
    </li>
  </ol>
  <h2
    data-testid="counter"
  >
    Index = 
    0
  </h2>
  <h3>
    Child Component: 
  </h3>
  <button
    onClick={[Function]}
  >
    Add 
    1
  </button>
  <button
    onClick={[Function]}
  >
    Minus 
    1
  </button>
  <h3>
    Child Component: 
  </h3>
  <button
    onClick={[Function]}
  >
    Add 
    3
  </button>
  <button
    onClick={[Function]}
  >
    Minus 
    3
  </button>
  <hr />
  <button
    onClick={[Function]}
  >
    Select Row based on index above
  </button>
  <ul>
    <li
      data-testid="usernames"
    >
      Alice
    </li>
    <li
      data-testid="usernames"
    >
      Bruce
    </li>
    <li
      data-testid="usernames"
    >
      Charlie
    </li>
    <li
      data-testid="usernames"
    >
      Donnie
    </li>
    <li
      data-testid="usernames"
    >
      Elizabeth
    </li>
    <li
      data-testid="usernames"
    >
      Frank
    </li>
  </ul>
  <p>
    Selected User: 
    Null
  </p>
</div>
`;
